# analyzing-text-data

./: .gitignore  LECTURE-SLIDES.html  README.md  build-and-publish-image.sh  pyproject.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
icsspy/: __init__.py  text.py
src/: style.py
tutorials/: 1-modelling-sentinment.qmd  2-modelling-topics.qmd
