[tool.poetry]
name = "icsspy"
packages = [{ include = "src" }]
version = "0.1.0"
description = ""
authors = ["John McLevey <john.mclevey@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bertopic = { version = "^0.16.3", extras = ["spacy"] }
ipykernel = "^6.29.5"
gensim = "^4.3.3"
spacy = "^3.7.6"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
pyprojroot = "^0.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
